Add add-opens for JMH